# rk9

./: .dockerignore  .gitignore  Dockerfile  FAQ.md  README.md  TODO.md  TODO.txt  cache.py  database.py  docker-compose.yml  main.py  pyproject.toml  util.py
.github/workflows/: publish.yml  release.yml
cogs/: __init__.py  blacklist.py  popular.py  prefix.py  query.py
migrations/: 001_init.py  002_modify_watched_tags.py  003_modify_last_check_type.py  004_create_blacklisted_tags.py  005_rename_prefixtags_and_add_popular.py
scripts/: cli.py  rk9-cli
