[project]
name = "rk9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "peewee>=3.18.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W"]