[project]
name = "rk9"
version = "0.1.1"
description = "Discord bot for subscribing to e621 tags"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "peewee>=3.18.1",
    "peewee-migrate>=1.13.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["UP017"]
